objects/APTS_Agreement_SAP_Setting__c.object
<CustomObject>
    <description>Used to enable/disable auto creation of MSPA agreement in SAP, and Block MSPA agreement in SAP</description>
    <fields>
        <fullName>APTS_Auto_Create_MSPA_In_SAP_On_Approval__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked, system will create MSPA type agreement automatically in SAP upon approval</description>
        <inlineHelpText>If checked, system will create MSPA type agreement automatically in SAP, when approved in SFDC</inlineHelpText>
        <label>Auto Create MSPA In SAP On Approval ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_BlockMSPA_Creation_In_SAP__c</fullName>
        <description>R6 - This field is used to control the Block MSPA in SAP functionality</description>
        <inlineHelpText>For selected subtypes, system will show a button on MSPA - &apos;Block in SAP&apos; to manually trigger &apos;Block&apos; of MSPA in SAP.</inlineHelpText>
        <label>Allow Block MSPA in SAP for Subtypes:</label>
        <picklist>
            <controllingField>APTS_Country__c</controllingField>
            <picklistValues>
                <fullName>Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stock Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Target</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSPA additional discount</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>APTS_Block_MSPA_Creation_In_SAP__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked system will not allow user to create MSPA type agreement in SAP</description>
        <inlineHelpText>If checked system will see a button on MSPA - &apos;Block in SAP&apos; to manually trigger &apos;Block&apos; of MSPA in SAP.</inlineHelpText>
        <label>Block MSPA Creation In SAP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Auto_Create_MSPA__c</fullName>
        <description>R6 - This field is used to Control the Creation of MSPA in SAP.</description>
        <inlineHelpText>For selected subtypes, system will create MSPA type agreement automatically in SAP, when approved in SFDC</inlineHelpText>
        <label>Auto-Create MSPA for Subtypes:</label>
        <picklist>
            <controllingField>APTS_Country__c</controllingField>
            <picklistValues>
                <fullName>Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stock Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Target</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indirect Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSPA additional discount</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Agreement SAP Setting</label>
    <listViews>
        <fullName>APTS_Agreement_SAP_Settings_For_Spain</fullName>
        <columns>NAME</columns>
        <columns>APTS_Auto_Create_MSPA_In_SAP_On_Approval__c</columns>
        <columns>APTS_Block_MSPA_Creation_In_SAP__c</columns>
        <columns>APTS_Country__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Agreement SAP Settings For Spain</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Auto_Create_MSPA__c</columns>
        <columns>APTS_BlockMSPA_Creation_In_SAP__c</columns>
        <columns>APTS_Country__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AS-{00000}</displayFormat>
        <label>Agreement SAP Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement SAP Settings</pluralLabel>
    <recordTypes>
        <fullName>EP</fullName>
        <active>true</active>
        <label>EP</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>